--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "appdirs",
     "generative-ai-hub-sdk[all]",
     "langchain",
 ]
