--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "pydantic",
     "tavily-python",
     "colorama",
-    "pygraphviz"
+    "pygraphviz",
+    "langchain-mcp-adapters"
 ]
 
 [project.urls]
