--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
     "tavily-python",
     "colorama",
     "pygraphviz",
-    "langchain-mcp-adapters"
+    "langchain-mcp-adapters",
+    "aiosqlite"
 ]
 
 [project.urls]
