adjusted ollama setup and added grandalf dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ dependencies = [
     "colorama",
     "pygraphviz",
     "langchain-mcp-adapters",
-    "aiosqlite"
+    "aiosqlite",
+    "grandalf"
 ]
 
 [project.urls]
