--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ packages = [
     "astonish",
     "astonish.providers",
     "astonish.factory",
-    "astonish.tools"
+    "astonish.tools",
+    "astonish.agents"
 ]
 
 [project]
