--- a/astonish/agents/git_diff_explainer.yaml
+++ b/astonish/agents/git_diff_explainer.yaml
@@ -14,6 +14,7 @@ nodes:
     output_model:
       modified_files: str
       response: str
+      has_modified_files: bool
     user_message:
       - response
 
@@ -102,7 +103,11 @@ flow:
   - from: START
     to: run_git_status
   - from: run_git_status
-    to: ask_file_selection
+    edges:
+      - to: ask_file_selection
+        condition: "lambda x: x['has_modified_files']"
+      - to: END
+        condition: "lambda x: not x['has_modified_files']"
   - from: ask_file_selection
     to: process_file_selection
   - from: process_file_selection
