--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 
 [project]
 name = "astonish"
-version = "0.4.1"
+version = "0.4.2"
 authors = [
     {name = "Rafael Schardosin Silva", email = "rafael.rs@gmail.com"},
 ]
@@ -27,22 +27,23 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "appdirs",
-    "generative-ai-hub-sdk[all]",
-    "langchain-ollama",
-    "langchain",
-    "langgraph",
-    "langgraph-checkpoint-sqlite",
-    "pydantic",
-    "colorama",
-    "langchain-mcp-adapters",
-    "aiosqlite",
-    "grandalf"
+    "appdirs==1.4.4",
+    "generative-ai-hub-sdk[all]==4.10.2",
+    "langchain-ollama==0.3.1",
+    "langchain==0.3.23",
+    "langgraph==0.3.27",
+    "langgraph-checkpoint-sqlite==2.0.6",
+    "pydantic==2.10.6",
+    "colorama==0.4.6",
+    "langchain-mcp-adapters==0.0.7",
+    "aiosqlite==0.21.0",
+    "grandalf==0.8"
 ]
 
 [project.optional-dependencies]
 test = [
-    "pytest"
+    "pytest==8.3.5",
+    "pytest-asyncio==0.26.0"
 ]
 
 [tool.pytest.ini_options]
