--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
     "aiosqlite==0.21.0",
     "grandalf==0.8",
     "pykwalify==1.8.0",
-    "inquirer==3.4.0"
+    "inquirer==3.4.0",
+    "langchain-anthropic==0.3.12"
 ]
 
 [project.optional-dependencies]
